--- a/public/index.html
+++ b/public/index.html
@@ -62,15 +62,38 @@
                   return;
                 }
               }
-              location.href = ('/contact');
+            })
+            .catch(err => {
+              // Do something for an error here
+              console.log(err)
+              location.href = ('/404');
+            })
+
+            fetch('https://raw.githubusercontent.com/chrischongyj/Uni-Course-Review/master/public/ntucourses.json')
+            .then(response => {
+              return response.json()
+            })
+            .then(data => {
+              // Work with JSON data here
+
+              for (var i = 0; i < data.length; i++) {
+                var inputVal = document.getElementById("myInput").value;
+
+                if (data[i].FIELD1 == inputVal) {
+                  location.href = ('/course/' + inputVal);
+                  return;
+                }
+              }
 
             })
             .catch(err => {
               // Do something for an error here
               console.log(err)
+              location.href = ('/404');
             })
 
           }
+
         
         </script>
       </div>
