Removed star rating system

--- a/public/contact.html
+++ b/public/contact.html
@@ -30,7 +30,8 @@
       </div>
     </nav>
 
-    <h1> Contact Page</h1>
+    <h1 style="text-align: center; font-size: large; padding-top: 20px;"> This website was built by Chris Chong.</h1>
+    <h2 style="text-align: center; font-size: medium; padding-top: 10px;">Contribute at: <a href="https://github.com/chrischongyj/Uni-Course-Review">https://github.com/chrischongyj/Uni-Course-Review</a></h2>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
