Added nus cs1010 exampole

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,9 @@
       <div class="topcourses">
         <h2>Top Courses:</h2>
         <ul>
-          <li><a href="/course/cz1011">CZ1011: Engineering Mathematics 1</a></li>
-          <li><a href="/course/cz1012">CZ1012: Engineering Mathematics 2</a></li>
-          <li><a href="/course/cz1015">CZ1015: Introduction to Data Science and Artificial Intelligence</a></li>
+          <li><a href="/course/cz1011">CZ1011: Engineering Mathematics 1 (NTU)</a></li>
+          <li><a href="/course/cz1012">CS1010: Programming Methodology (NUS)</a></li>
+          <li><a href="/course/cz1015">CZ1015: Introduction to Data Science and Artificial Intelligence (NTU)</a></li>
         </ul>
       </div>
 
