Corrected CS1010 link

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         <h2>Top Courses:</h2>
         <ul>
           <li><a href="/course/cz1011">CZ1011: Engineering Mathematics 1 (NTU)</a></li>
-          <li><a href="/course/cz1012">CS1010: Programming Methodology (NUS)</a></li>
+          <li><a href="/course/cs1010">CS1010: Programming Methodology (NUS)</a></li>
           <li><a href="/course/cz1015">CZ1015: Introduction to Data Science and Artificial Intelligence (NTU)</a></li>
         </ul>
       </div>
